--- a/Assignment-1/ActiveLifestyleFuelStation.css
+++ b/Assignment-1/ActiveLifestyleFuelStation.css
@@ -7,7 +7,7 @@ body {
 
 
 header {
-background-color: rgb(223, 134, 17);
+background-color: #142d4c;
 color: white ;
 text-align: center;
 padding: 20px;
@@ -27,18 +27,18 @@ font-family: 'Josefin Sans', sans-serif;
 /* Product container styles */
 .product-container {
     width: 30%;
-    height: 90vh;
+    height: 100vh;
     margin: 10px;
     padding: 20px;
     border: 1px solid #ddd;
-    box-shadow: 0 2px 4px rgb(223, 134, 17);
+    box-shadow: 0 2px 4px #142d4c;
     background-color: #fff;
     overflow: hidden; /* Hide overflow content */
 }
 
 .product-container img {
     width: 100%;
-    height: 380px; /* Set a specific height for the image */
+    height: 200px; /* Set a specific height for the image */
     object-fit: cover; /* Maintain aspect ratio and cover the entire container */
     display: block;
     margin: 0 auto 10px;
@@ -67,7 +67,7 @@ font-family: 'Josefin Sans', sans-serif;
 }
 
 .topnav {
-    background-color: rgb(225, 179, 139);
+    background-color: #9fd3c7; 
     overflow: hidden;
 }
 
@@ -89,12 +89,12 @@ font-family: 'Josefin Sans', sans-serif;
 
 /* Add a color to the active/current link */
 .topnav a.active {
-    background-color: rgb(176, 144, 48);
+    background-color: #aeccc6; 
     color: white;
 }
 footer {
     text-align: center;
     padding: 3px;
-    background-color: rgb(223, 134, 17);
+    background-color: #142d4c;
     color: white;
 }
