--- a/Assignment-1/Gourment Culinary.css
+++ b/Assignment-1/Gourment Culinary.css
@@ -7,7 +7,7 @@ body {
 
 
 header {
-background-color: rgb(223, 134, 17);
+background-color: #142d4c;
 color: white ;
 text-align: center;
 padding: 20px;
@@ -31,7 +31,7 @@ font-family: 'Josefin Sans', sans-serif;
     margin: 10px;
     padding: 20px;
     border: 1px solid #ddd;
-    box-shadow: 0 2px 4px rgb(223, 134, 17);
+    box-shadow: 0 2px 4px #142d4c;
     background-color: #fff;
     overflow: hidden; /* Hide overflow content */
 }
@@ -67,7 +67,7 @@ font-family: 'Josefin Sans', sans-serif;
 }
 
 .topnav {
-    background-color: rgb(225, 179, 139);
+    background-color: #9fd3c7; 
     overflow: hidden;
 }
 
@@ -89,12 +89,12 @@ font-family: 'Josefin Sans', sans-serif;
 
 /* Add a color to the active/current link */
 .topnav a.active {
-    background-color: rgb(176, 144, 48);
+    background-color: #aeccc6; 
     color: white;
 }
 footer {
     text-align: center;
     padding: 3px;
-    background-color: rgb(223, 134, 17);
+    background-color: #142d4c;
     color: white;
 }
