--- a/Assignment-1/Snacks.css
+++ b/Assignment-1/Snacks.css
@@ -9,7 +9,7 @@
     
         
         header {
-            background-color: rgb(223, 134, 17);
+            background-color: #142d4c;
             color: white ;
             text-align: center;
             padding: 20px;
@@ -32,7 +32,7 @@
             margin: 10px;
             padding: 20px;
             border: 1px solid #ddd;
-            box-shadow: 0 2px 4px rgb(223, 134, 17);
+            box-shadow: 0 2px 4px #142d4c;
             background-color: #fff;
         }
     
@@ -89,7 +89,7 @@
             margin-top: 20px;
         }
         .topnav {
-            background-color: rgb(225, 179, 139);
+            background-color: #9fd3c7; 
             overflow: hidden;
         }
 
@@ -111,13 +111,13 @@
 
         /* Add a color to the active/current link */
         .topnav a.active {
-            background-color: rgb(176, 144, 48);
+            background-color: #aeccc6; 
             color: white;
         }
 
         footer {
             text-align: center;
             padding: 3px;
-            background-color: rgb(223, 134, 17);
+            background-color: #142d4c;
             color: white;
         }
