--- a/Assignment-2/style.css
+++ b/Assignment-2/style.css
@@ -65,7 +65,7 @@ body {
   a.git {
     display: inline-block;
       padding: 0.90em 2.2em;
-      border: 0.1em solid #FFFFFF;
+      border: 0.2em solid #FFFFFF;
       margin: 1.2em 0.3em 0.3em 42em;
       border-radius: 0.12em;
       box-sizing: border-box;
@@ -193,7 +193,7 @@ body {
     }
   
     .header1 a:hover {
-      color: aqua;
+      color: #685642;
     }
   
     .col2 h1 {
