--- a/Assignment-3/style.css
+++ b/Assignment-3/style.css
@@ -2,6 +2,15 @@ body {
   font-family: 'Helvetica Neue', 'Helvetica', sans-serif;
 }
 
+header{
+    color: black ;
+    text-align: center;
+    padding: 20px;
+    font-size: 50px;
+    font-weight: bold;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
 .socialmediaicons ul {
   margin: 0;
   padding: 0;
@@ -18,6 +27,25 @@ body {
   border-radius: 50%;
 }
 
-.socialmediaicons{
-	text-align: center;
+.socialmediaicons {
+  text-align: center;
+}
+
+.dropDownTextArea {
+  display: none;
+}
+
+table {
+  table-layout: fixed;
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  z-index: 9999;
 }
