--- a/Assignment-3/style.css
+++ b/Assignment-3/style.css
@@ -3,12 +3,13 @@ body {
 }
 
 header{
-    color: black ;
+    color: orange ;
     text-align: center;
     padding: 20px;
     font-size: 50px;
     font-weight: bold;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Times New Roman', serif;
+    text-align: center;
 }
 
 .socialmediaicons ul {
